force-app/main/default/objects/Authentication_Parameters__mdt/Authentication_Parameters__mdt.object-meta.xml
<CustomObject>
    <label>Authentication Parameter</label>
    <pluralLabel>Authentication Parameters</pluralLabel>
</CustomObject>