force-app/main/default/objects/Authentication_Parameters__mdt/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>password</fullName>
                <default>true</default>
                <label>password</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>