force-app/main/default/objects/Authentication_Parameters__mdt/fields/IntegerationSetting__c.field-meta.xml
<CustomField>
    <fullName>IntegerationSetting__c</fullName>
    <label>IntegerationSetting</label>
    <referenceTo>Integeration_Setting__mdt</referenceTo>
    <relationshipLabel>Authentication Parameters</relationshipLabel>
    <relationshipName>Authentication_Parameters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>